Proeminent header section. Styling.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </main>
     <footer>
-      <p>&copy; 2025 Versete · Un proiect pentru memorarea Scripturii</p>
+      <p>&copy; Versete · Un proiect pentru memorarea Scripturii · 2025</p>
     </footer>
     <script src="scripts/app.js"></script>
   </body>
