--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <span class="hero-ref">Psalmul 119:11</span>
         </blockquote>
       </div>
-      <div id="mode-buttons">
+      <div id="mode-buttons" class="hidden">
         <button id="mode-verset" class="mode-btn mode-active">Verset</button>
         <button id="mode-referinta" class="mode-btn">Referință</button>
       </div>
@@ -35,8 +35,8 @@
           </button>
         </div>
       </section>
-      <section id="verses-section" style="display: none"></section>
-      <div id="action-buttons">
+      <section id="verses-section" class="hidden"></section>
+      <div id="action-buttons" class="hidden">
         <button id="back-btn">Înapoi la colecții</button>
         <button id="refresh-btn">Reîncarcă</button>
       </div>
