--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
         <h2>Alege colecția de versete</h2>
         <div class="collection-list">
           <button class="collection-btn" data-collection="comunitate2025">
-            Faza comunitate 2025
+            Olimpiada - comunitate 2025
+          </button>
+          <button class="collection-btn" data-collection="sioniada2025">
+            Sioniadă - 2025
           </button>
           <button class="collection-btn" data-collection="scriptura">
-            Despre Scriptura
+            Versete generale
           </button>
         </div>
       </section>
