--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </main>
     <footer>
-      <p>&copy; Versete · Un proiect pentru memorarea Scripturii · 2025</p>
+      <p>&copy; Un proiect pentru memorarea Scripturii· 2025</p>
     </footer>
     <script src="scripts/app.js"></script>
   </body>
