--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memorează versete din Scriptură</title>
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="icon" href="styles/bible.png" type="image/x-icon" />
+    <link rel="icon" href="styles/library.png" type="image/x-icon" />
   </head>
   <body>
     <header>
