Second click reveals 30% of words in verse mode.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </main>
     <footer>
       <div class="footer-flex">
-        <p class="footer-main">&copy; Un proiect pentru memorarea Scripturii · 2025 ·</p>
+        <p class="footer-main">&copy; Un ajutor în memorarea Scripturii · 2025 ·</p>
         <div class="footer-credit">
           <a href="http://ovidiuchis.github.io/" target="_blank" rel="noopener noreferrer" class="credit-link">
             <span class="credit-text">by</span>
